# hnswlib

./: .gitignore  CMakeLists.txt  Untitled.ipynb  bench-linux.sh  bench-results.csv  bench.sh  f16-std-transform-bench.csv  f16-std-transform-bench2.csv  l2-refactor-bench.csv
hnswlib/: bench.cpp  bench_distances.cpp  bench_float16.cpp  decoder_f16.h  float16.h  hnswlib.h  space_ip.h  space_l2.h
